# specprod-db

./: .gitignore  .readthedocs.yml  LICENSE.rst  README.rst  setup.cfg
.github/workflows/: python-package.yml
doc/: api.rst  changes.rst  conf.py  dynamic.rst  index.rst
doc/nb/: DebugCOEFF.ipynb  TestDailyPhotometry.ipynb  TestNewTile.ipynb  TestPatchDaily.ipynb  TestPatchDailyWithJura.ipynb  finding-edge-cases.ipynb
etc/: specprod-db.module
py/specprodDB/: __init__.py  _version.py  batch.py  coeff.py  load.py  patch.py  tile.py  util.py
py/specprodDB/attic/: load_redrock.txt  update_truth.txt  zpix_target.txt
py/specprodDB/data/: coeff_patch.sql  load_specprod_db.ini
py/specprodDB/test/: __init__.py  test_batch.py  test_coeff.py  test_database.py  test_load.py  test_patch.py  test_tile.py  test_top_level.py  test_util.py
py/specprodDB/test/t/: test.pgpass
spin/db/: 00-setup-desi.sh  Dockerfile  db.yaml
